feat(user): add password input and validation for user creation